--- a/a6_q2.ipynb
+++ b/a6_q2.ipynb
@@ -1,1 +1,71 @@
-
+{
+ "nbformat": 4,
+ "nbformat_minor": 2,
+ "metadata": {
+  "language_info": {
+   "name": "python",
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "version": "3.7.6-final"
+  },
+  "orig_nbformat": 2,
+  "file_extension": ".py",
+  "mimetype": "text/x-python",
+  "name": "python",
+  "npconvert_exporter": "python",
+  "pygments_lexer": "ipython3",
+  "version": 3,
+  "kernelspec": {
+   "name": "python37664bitdb91259f85624d659b61778b45f44e65",
+   "display_name": "Python 3.7.6 64-bit"
+  }
+ },
+ "cells": [
+  {
+   "source": [
+    "import dwavebinarycsp\n",
+    "from dwave.system import DWaveSampler, EmbeddingComposite\n",
+    "import dimod\n",
+    "from dimod.reference.samplers import ExactSolver\n",
+    "sampler = ExactSolver()"
+   ],
+   "cell_type": "code",
+   "outputs": [],
+   "metadata": {},
+   "execution_count": 1
+  },
+  {
+   "source": [
+    "def sat3(a, b, c):\n",
+    "    if a+b+c == 1:\n",
+    "        return true\n",
+    "    else\n",
+    "        return false\n",
+    "\n",
+    "clauses = [['0', '1', '2'], ['1', '2', '3'], ['2', '3', '4'], ['3', '4', '5'], ['4', '5', '6'], ['5', '6', '7'], ['6', '7', '8'], ['7', '8', '9']]"
+   ],
+   "cell_type": "code",
+   "outputs": [
+    {
+     "output_type": "error",
+     "ename": "SyntaxError",
+     "evalue": "invalid syntax (<ipython-input-2-2bd156452de2>, line 4)",
+     "traceback": [
+      "\u001b[0;36m  File \u001b[0;32m\"<ipython-input-2-2bd156452de2>\"\u001b[0;36m, line \u001b[0;32m4\u001b[0m\n\u001b[0;31m    else\u001b[0m\n\u001b[0m        ^\u001b[0m\n\u001b[0;31mSyntaxError\u001b[0m\u001b[0;31m:\u001b[0m invalid syntax\n"
+     ]
+    }
+   ],
+   "metadata": {},
+   "execution_count": 2
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  }
+ ]
+}
