--- a/a6_q2.ipynb
+++ b/a6_q2.ipynb
@@ -29,7 +29,11 @@
     "from dwave.system import DWaveSampler, EmbeddingComposite\n",
     "import dimod\n",
     "from dimod.reference.samplers import ExactSolver\n",
-    "sampler = ExactSolver()"
+    "\n",
+    "sampler = ExactSolver()\n",
+    "\n",
+    "# Create a binary constraint satisfaction problem\n",
+    "csp = dwavebinarycsp.ConstraintSatisfactionProblem(dwavebinarycsp.BINARY)"
    ],
    "cell_type": "code",
    "outputs": [],
@@ -40,32 +44,71 @@
    "source": [
     "def sat3(a, b, c):\n",
     "    if a+b+c == 1:\n",
-    "        return true\n",
-    "    else\n",
-    "        return false\n",
+    "        return True\n",
+    "    else:\n",
+    "        return False\n",
     "\n",
     "clauses = [['0', '1', '2'], ['1', '2', '3'], ['2', '3', '4'], ['3', '4', '5'], ['4', '5', '6'], ['5', '6', '7'], ['6', '7', '8'], ['7', '8', '9']]"
    ],
    "cell_type": "code",
-   "outputs": [
-    {
-     "output_type": "error",
-     "ename": "SyntaxError",
-     "evalue": "invalid syntax (<ipython-input-2-2bd156452de2>, line 4)",
-     "traceback": [
-      "\u001b[0;36m  File \u001b[0;32m\"<ipython-input-2-2bd156452de2>\"\u001b[0;36m, line \u001b[0;32m4\u001b[0m\n\u001b[0;31m    else\u001b[0m\n\u001b[0m        ^\u001b[0m\n\u001b[0;31mSyntaxError\u001b[0m\u001b[0;31m:\u001b[0m invalid syntax\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "metadata": {},
    "execution_count": 2
   },
   {
+   "source": [
+    "for clause in clauses:\n",
+    "    csp.add_constraint(sat3, clause)"
+   ],
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
    "outputs": [],
-   "source": []
+   "metadata": {},
+   "execution_count": 3
+  },
+  {
+   "source": [
+    "# Convert the binary constraint satisfaction problem to a binary quadratic model\n",
+    "bqm = dwavebinarycsp.stitch(csp)"
+   ],
+   "cell_type": "code",
+   "outputs": [],
+   "metadata": {},
+   "execution_count": 5
+  },
+  {
+   "source": [
+    "sampler = ExactSolver()\n",
+    "response = sampler.sample(bqm).lowest()\n",
+    "print(response) "
+   ],
+   "cell_type": "code",
+   "outputs": [
+    {
+     "output_type": "stream",
+     "name": "stdout",
+     "text": "0  1  2  3  4  5  6  7  8  9 energy num_oc.\n1  0  0  1  0  0  1  0  0  1  0    0.0       1\n2  1  0  0  1  0  0  1  0  0  1    0.0       1\n0  0  1  0  0  1  0  0  1  0  0    0.0       1\n['BINARY', 3 rows, 3 samples, 10 variables]\n"
+    }
+   ],
+   "metadata": {},
+   "execution_count": 6
+  },
+  {
+   "source": [
+    "print(\"From the table, there are three possible solutions for the problem:\")\n",
+    "\n",
+    "for sol in list(response):\n",
+    "    print(list(sol.values()))\n"
+   ],
+   "cell_type": "code",
+   "outputs": [
+    {
+     "output_type": "stream",
+     "name": "stdout",
+     "text": "From the table, there are three possible solutions for the problem:\n[0, 0, 1, 0, 0, 1, 0, 0, 1, 0]\n[1, 0, 0, 1, 0, 0, 1, 0, 0, 1]\n[0, 1, 0, 0, 1, 0, 0, 1, 0, 0]\n"
+    }
+   ],
+   "metadata": {},
+   "execution_count": 9
   }
  ]
 }
