--- a/a6_q2.ipynb
+++ b/a6_q2.ipynb
@@ -161,34 +161,39 @@
   },
   {
    "source": [
-    "print(\"When the algorithm was run in the QPU, only one correct answer was achieved:\")\n",
-    "print(\"(0, 0, 1, 0, 0, 1, 0, 0, 1, 0)\")\n",
+    "# Get the lowest energy results from the sampleset\n",
+    "lowest = sampleset.lowest().record\n",
     "\n",
+    "num_correct = 0\n",
     "\n",
-    "lowest = sampleset.lowest()[energy]\n",
-    "print(lowest)"
+    "# If the energy of the lowest results is greater than 0.1 this does not represent the base case/correct answer\n",
+    "if lowest[0][1] > 0.1:\n",
+    "    print(\"When the algorithm was run in the QPU, no correct answers were found\")\n",
+    "else:\n",
+    "    # Only one correct answer found\n",
+    "    if lowest.size == 1:\n",
+    "        print(\"When the algorithm was run in the QPU, the following correct answer was found:\")\n",
+    "\n",
+    "    # Multiple correct answers found\n",
+    "    else:\n",
+    "        print(\"When the algorithm was run in the QPU, the following correct answers were found:\")\n",
+    "    # print the correct answer(s)\n",
+    "    for sol in lowest:\n",
+    "        num_correct += 1\n",
+    "        print(sol[0])\n",
+    "\n",
+    "print(\"\\nThe number of correct answers was:\", num_correct)"
    ],
    "cell_type": "code",
    "outputs": [
     {
      "output_type": "stream",
      "name": "stdout",
-     "text": "When the algorithm was run in the QPU, only one correct answer was achieved:\n(0, 0, 1, 0, 0, 1, 0, 0, 1, 0)\n"
-    },
-    {
-     "output_type": "error",
-     "ename": "NameError",
-     "evalue": "name 'energy' is not defined",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
-      "\u001b[0;32m<ipython-input-14-a544b74c8d99>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[1;32m      3\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      4\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 5\u001b[0;31m \u001b[0mlowest\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0msampleset\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mlowest\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0menergy\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      6\u001b[0m \u001b[0mprint\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mlowest\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-      "\u001b[0;31mNameError\u001b[0m: name 'energy' is not defined"
-     ]
+     "text": "When the algorithm was run in the QPU, the following correct answers were found:\n[0 0 1 0 0 1 0 0 1 0]\n[1 0 0 1 0 0 1 0 0 1]\n[0 1 0 0 1 0 0 1 0 0]\n\nThe number of correct answers was: 3\n"
     }
    ],
    "metadata": {},
-   "execution_count": 14
+   "execution_count": 28
   },
   {
    "cell_type": "code",
