minor formatting updates

--- a/a6_q1.ipynb
+++ b/a6_q1.ipynb
@@ -18,13 +18,15 @@
   "pygments_lexer": "ipython3",
   "version": 3,
   "kernelspec": {
-   "name": "python37664bit9ff4cfefd56e408bb1c0af2a8141cbdc",
+   "name": "python37664bit173803afacf54450b1be05e7f1569368",
    "display_name": "Python 3.7.6 64-bit"
   }
  },
  "cells": [
   {
    "source": [
+    "# Question 1: Qubit chaining for 3-SAT\n",
+    "\n",
     "import dimod\n",
     "from dimod.reference.samplers import ExactSolver\n",
     "sampler = ExactSolver()"
@@ -36,7 +38,10 @@
   },
   {
    "source": [
+    "# Create the model\n",
     "bqm = dimod.BinaryQuadraticModel({('q0', 'q0'): 0.33, ('q1', 'q1'): -0.33, ('q4', 'q4'): -0.33, ('q5', 'q5'): 0.33, ('q0', 'q4'): 0.66, ('q1', 'q4'): 0.66, ('q1', 'q5'): 0.66, ('q0', 'q5'): -1}, 'BINARY')\n",
+    "\n",
+    "# Run the brute force method with ExactSolver\n",
     "response = sampler.sample(bqm)\n",
     "print(response) "
    ],
@@ -53,14 +58,18 @@
   },
   {
    "source": [
-    "print(\"From the above table, we see the three solutions with lowest energy are as expected: (q0, q1, q4, q5) = (1, 0, 0, 1), (0, 1, 0, 1) and (0, 0, 1, 0)\")"
+    "# Answer\n",
+    "print(\"From the above table, we see the three solutions with lowest energy (ground state) are as expected:\")\n",
+    "print(\"(q0, q1, q4, q5) = (1, 0, 0, 1), (0, 1, 0, 1) and (0, 0, 1, 0)\")\n",
+    "print(\"\\nSince q0 and q5 were chained, this translates to the solutions:\")\n",
+    "print(\"(a, b, c) = (1, 0, 0), (0, 1, 0), and (0, 0, 1)\")"
    ],
    "cell_type": "code",
    "outputs": [
     {
      "output_type": "stream",
      "name": "stdout",
-     "text": "From the above table, we see the three solutions with lowest energy are as expected: (q0, q1, q4, q5) = (1, 0, 0, 1), (0, 1, 0, 1) and (0, 0, 1, 0)\n"
+     "text": "From the above table, we see the three solutions with lowest energy (ground state) are as expected:\n(q0, q1, q4, q5) = (1, 0, 0, 1), (0, 1, 0, 1) and (0, 0, 1, 0)\n\nSince q0 and q5 were chained, this translates to the solutions:\n(a, b, c) = (1, 0, 0), (0, 1, 0), and (0, 0, 1)\n"
     }
    ],
    "metadata": {},
